Add filter modal to created room and history page; update styles and image sizes

--- a/public/css/page-home.css
+++ b/public/css/page-home.css
@@ -143,6 +143,7 @@ body {
     margin: auto;
     width: auto;
     display: grid;
+    background: none;
     gap: 20px;
     padding: 20px;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
