--- a/public/css/page-add-room.css
+++ b/public/css/page-add-room.css
@@ -85,15 +85,18 @@ body {
 .add-room-form select:focus,
 .add-room-form textarea:focus,
 .detail-room-form textarea:focus,
-.custom-select-input:focus, /* เพิ่มสำหรับ input ชื่อสถานที่ */
-#capacity:focus /* เพิ่มสำหรับ input จำนวนผู้เข้าร่วม */
-{
+.custom-select-input:focus,
+/* เพิ่มสำหรับ input ชื่อสถานที่ */
+#capacity:focus
+
+/* เพิ่มสำหรับ input จำนวนผู้เข้าร่วม */
+    {
     /* ทำให้ขอบหนาขึ้น */
     border-width: 2px;
-    
+
     /* เปลี่ยนสีขอบเป็นสีหลัก (primary-color) เพื่อให้เห็นชัดเจน */
-    border-color: var(--primary-color); 
-    
+    border-color: var(--primary-color);
+
     /* ลบ outline สีฟ้าที่เบราว์เซอร์สร้างขึ้นเองออกไป */
     outline: none;
 }
@@ -101,7 +104,8 @@ body {
 input[type="time"].time-input {
     padding: 0px 0px 0px 10px;
 }
-.add-room-form input[type="number"]{
+
+.add-room-form input[type="number"] {
     height: 36px;
     border: 1px solid var(--border-color);
     border-radius: 10px;
@@ -113,11 +117,13 @@ input[type="time"].time-input {
     box-sizing: border-box;
     min-width: 5vw;
 }
-.capacity input{
+
+.capacity input {
     border: 2px solid var(--primary-color-light);
     text-align: right;
     font-weight: 500;
 }
+
 .inline-separator {
     display: inline-block;
     margin: 0 6px;
@@ -131,13 +137,20 @@ input[type="time"].time-input {
     display: inline-block;
 }
 
+#join-box {
+    display: flex;
+    justify-content: center;
+    margin-top: 0px;
+}
+
 .btn-box {
     display: flex;
     justify-content: center;
     margin-top: 25px;
 }
 
-#manage-check-in-btn {
+#manage-check-in-btn,
+#leave-room-btn {
     display: none;
 }
 
@@ -355,10 +368,11 @@ strong {
     color: var(--text-dark);
 }
 
-.checkin-icon{
+.checkin-icon {
     font-size: 24px;
     color: #22c55e;
 }
+
 /* --- Uploader --- */
 .add-cover-box {
     border-radius: 12px;
@@ -475,12 +489,16 @@ strong {
 
 
 /* --- CSS สำหรับกล่อง Check-in (จากดีไซน์) --- */
+.unowner-room-btns {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 /* State 1: กล่องฟอร์ม */
-.check-in-container {
+.action-buttons-container {
     margin: auto;
     width: 94%;
 
-    display: none;
     margin-top: 13px;
     height: 41px;
 }
@@ -489,7 +507,9 @@ strong {
     display: none;
     align-items: center;
     width: 100%;
+    max-width: 400px;
     height: 41px;
+    margin: auto;
 }
 
 .check-in-icon {
@@ -537,6 +557,28 @@ strong {
     background-color: var(--primary-color);
 }
 
+.full-room-message {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 41px;
+    max-width: 400px;
+    border-radius: 12px;
+    margin: auto;
+
+    background-color: #e2e0e0;
+    border: 1px solid #000000;
+    color: #414141;
+
+    font-size: 18px;
+    font-weight: 600;
+    gap: 10px;
+}
+.full-room-message .material-symbols-outlined {
+    font-size: 24px;
+}
+
 /* State 2: ข้อความ "เช็คชื่อแล้ว" */
 .checked-in-message {
     display: none;
@@ -544,7 +586,9 @@ strong {
     justify-content: center;
     width: 100%;
     height: 100%;
+    max-width: 400px;
     border-radius: 12px;
+    margin: auto;
 
     background-color: #f0fdf4;
     border: 1px solid #22c55e;
@@ -559,10 +603,11 @@ strong {
     font-size: 24px;
 }
 
-.room-name{
+.room-name {
     font-size: 28px;
     font-weight: 400;
 }
+
 /* footer */
 .login-footer {
     width: 100%;
