--- a/public/css/page-home.css
+++ b/public/css/page-home.css
@@ -731,6 +731,22 @@ body {
     align-items: center;
 }
 
+.btn-htsroom-item{
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 35px;
+    background: linear-gradient(180deg, #6C6C6C -1.34%, #D2D2D2 119.5%);
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 35px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.btn-htsroom-item:hover {
+    background: #717171;
+}
 @media screen and (min-width: 1024px) {
 
     .rooms-List {
